# server/src/main/java/org/candlepin/resource/EntitlementResource.java
@@ -23,14 +23,13 @@ import org.candlepin.common.exceptions.BadRequestException;
 import org.candlepin.common.exceptions.NotFoundException;
 import org.candlepin.common.paging.Page;
 import org.candlepin.common.paging.PageRequest;
-import org.candlepin.common.util.SuppressSwaggerCheck;
 import org.candlepin.controller.Entitler;
 import org.candlepin.controller.PoolManager;
 import org.candlepin.dto.ModelTranslator;
 import org.candlepin.dto.api.v1.AsyncJobStatusDTO;
 import org.candlepin.dto.api.v1.EntitlementDTO;
+import org.candlepin.dto.api.v1.KeyValueParamDTO;
 import org.candlepin.model.AsyncJobStatus;
-import org.candlepin.model.Cdn;
 import org.candlepin.model.Consumer;
 import org.candlepin.model.ConsumerCurator;
 import org.candlepin.model.ConsumerType;
@@ -45,17 +44,9 @@ import org.candlepin.policy.js.entitlement.Enforcer;
 import org.candlepin.policy.js.entitlement.Enforcer.CallerType;
 import org.candlepin.policy.js.entitlement.EntitlementRulesTranslator;
 import org.candlepin.resource.util.EntitlementFinderUtil;
-import org.candlepin.resteasy.parameter.KeyValueParameter;
 
 import com.google.inject.Inject;
 import com.google.inject.persist.Transactional;
-
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
-import io.swagger.annotations.Authorization;
 
 import org.apache.commons.lang.StringUtils;
 import org.jboss.resteasy.spi.ResteasyProviderFactory;
@@ -63,42 +54,30 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.xnap.commons.i18n.I18n;
 
-import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
-import javax.ws.rs.Consumes;
-import javax.ws.rs.DELETE;
-import javax.ws.rs.DefaultValue;
-import javax.ws.rs.GET;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.Context;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 
 /**
  * REST api gateway for the User object.
  */
-@Path("/entitlements")
-@Api(value = "entitlements", authorizations = { @Authorization("basic") })
-public class EntitlementResource {
-    private static Logger log = LoggerFactory.getLogger(EntitlementResource.class);
+public class EntitlementResource implements EntitlementsApi {
+    private static final Logger log = LoggerFactory.getLogger(EntitlementResource.class);
 
-    private ConsumerCurator consumerCurator;
-    private ConsumerTypeCurator consumerTypeCurator;
-    private PoolManager poolManager;
-    private EntitlementCurator entitlementCurator;
-    private I18n i18n;
-    private Entitler entitler;
-    private Enforcer enforcer;
-    private EntitlementRulesTranslator messageTranslator;
-    private JobManager jobManager;
-    private ModelTranslator translator;
+    private final ConsumerCurator consumerCurator;
+    private final ConsumerTypeCurator consumerTypeCurator;
+    private final PoolManager poolManager;
+    private final EntitlementCurator entitlementCurator;
+    private final I18n i18n;
+    private final Entitler entitler;
+    private final Enforcer enforcer;
+    private final EntitlementRulesTranslator messageTranslator;
+    private final JobManager jobManager;
+    private final ModelTranslator translator;
 
     @Inject
     public EntitlementResource(EntitlementCurator entitlementCurator,
@@ -112,16 +91,16 @@ public class EntitlementResource {
         JobManager jobManager,
         ModelTranslator translator) {
 
-        this.entitlementCurator = entitlementCurator;
-        this.consumerCurator = consumerCurator;
-        this.consumerTypeCurator = consumerTypeCurator;
-        this.i18n = i18n;
-        this.poolManager = poolManager;
-        this.entitler = entitler;
-        this.enforcer = enforcer;
-        this.messageTranslator = messageTranslator;
-        this.jobManager = jobManager;
-        this.translator = translator;
+        this.entitlementCurator = Objects.requireNonNull(entitlementCurator);
+        this.consumerCurator = Objects.requireNonNull(consumerCurator);
+        this.consumerTypeCurator = Objects.requireNonNull(consumerTypeCurator);
+        this.i18n = Objects.requireNonNull(i18n);
+        this.poolManager = Objects.requireNonNull(poolManager);
+        this.entitler = Objects.requireNonNull(entitler);
+        this.enforcer = Objects.requireNonNull(enforcer);
+        this.messageTranslator = Objects.requireNonNull(messageTranslator);
+        this.jobManager = Objects.requireNonNull(jobManager);
+        this.translator = Objects.requireNonNull(translator);
     }
 
     private void verifyExistence(Object o, String id) {
@@ -130,14 +109,8 @@ public class EntitlementResource {
         }
     }
 
-    @ApiOperation(notes = "Checks Consumer for Product Entitlement", value = "hasEntitlement")
-    @ApiResponses({ @ApiResponse(code = 404, message = "") })
-    @GET
-    @Produces(MediaType.APPLICATION_JSON)
-    @Path("consumer/{consumer_uuid}/product/{product_id}")
-    public EntitlementDTO hasEntitlement(@PathParam("consumer_uuid") String consumerUuid,
-        @PathParam("product_id") String productId) {
-
+    @Override
+    public EntitlementDTO hasEntitlement(String consumerUuid, String productId) {
         Consumer consumer = consumerCurator.findByUuid(consumerUuid);
         verifyExistence(consumer, consumerUuid);
 
@@ -152,16 +125,13 @@ public class EntitlementResource {
                 consumerUuid, productId));
     }
 
-    @ApiOperation(notes = "Retrieves list of Entitlements", value = "listAllForConsumer")
-    @ApiResponses({ @ApiResponse(code = 400, message = "") })
-    @GET
-    @Produces(MediaType.APPLICATION_JSON)
+    @Override
     public List<EntitlementDTO> listAllForConsumer(
-        @QueryParam("consumer") String consumerUuid,
-        @QueryParam("matches") String matches,
-        @QueryParam("attribute") List<KeyValueParameter> attrFilters,
-        @Context PageRequest pageRequest) {
+        String consumerUuid,
+        String matches,
+        List<KeyValueParamDTO> attrFilters) {
 
+        PageRequest pageRequest = ResteasyProviderFactory.getContextData(PageRequest.class);
         EntitlementFilterBuilder filters = EntitlementFinderUtil.createFilter(matches, attrFilters);
         Page<List<Entitlement>> p;
         if (consumerUuid != null) {
@@ -186,14 +156,8 @@ public class EntitlementResource {
         return entitlementDTOs;
     }
 
-    @ApiOperation(notes = "Retrieves a single Entitlement", value = "getEntitlement")
-    @ApiResponses({ @ApiResponse(code = 404, message = "") })
-    @GET
-    @Produces(MediaType.APPLICATION_JSON)
-    @Path("{entitlement_id}")
-    public EntitlementDTO getEntitlement(
-        @PathParam("entitlement_id") @Verify(Entitlement.class) String entitlementId) {
-
+    @Override
+    public EntitlementDTO getEntitlement(@Verify(Entitlement.class) String entitlementId) {
         Entitlement entitlement = entitlementCurator.get(entitlementId);
 
         if (entitlement == null) {
@@ -210,16 +174,8 @@ public class EntitlementResource {
         return this.translator.translate(entitlement, EntitlementDTO.class);
     }
 
-    @ApiOperation(notes = "Updates an Entitlement. This only works for the quantity.",
-        value = "updateEntitlement")
-    @ApiResponses({ @ApiResponse(code = 404, message = "") })
-    @PUT
-    @Consumes(MediaType.APPLICATION_JSON)
-    @Produces(MediaType.APPLICATION_JSON)
-    @Path("{entitlement_id}")
-    public void updateEntitlement(
-        @PathParam("entitlement_id") @Verify(Entitlement.class) String id,
-        @ApiParam(name = "update", required = true) EntitlementDTO update) {
+    @Override
+    public void updateEntitlement(@Verify(Entitlement.class) String id, EntitlementDTO update) {
         //TODO Why do we accept a whole Entitlement object here, if we only use the quantity field???
 
         // Check that quantity param was set and is not 0:
@@ -241,18 +197,14 @@ public class EntitlementResource {
         }
     }
 
-
-    @ApiOperation(notes = "Retrieves a Subscription Certificate.  We can't return CdnInfo " +
-        "at this time, but when the time comes this is the implementation we want to start" +
-        " from. It will require changes to thumbslug.  will also" +
-        " @Produces(MediaType.APPLICATION_JSON)", value = "getUpstreamCert")
-    @ApiResponses({ @ApiResponse(code = 404, message = "") })
-    @GET
-    @Produces(MediaType.TEXT_PLAIN)
-    @Path("{dbid}/upstream_cert")
-    public String getUpstreamCert(
-        @PathParam("dbid") String entitlementId) {
-
+    /**
+     * Retrieves a Subscription Certificate.  We can't return CdnInfo at this
+     * time, but when the time comes this is the implementation we want to start
+     * from. It will require changes to thumbslug.
+     * Will also @Produces(MediaType.APPLICATION_JSON)", value = "getUpstreamCert"
+     */
+    @Override
+    public String getUpstreamCert(String entitlementId) {
         Entitlement ent = entitlementCurator.get(entitlementId);
         if (ent == null) {
             throw new NotFoundException(i18n.tr(
@@ -285,12 +237,8 @@ public class EntitlementResource {
         return cert.getCert() + cert.getKey();
     }
 
-    @ApiOperation(notes = "Deletes an Entitlement", value = "unbind")
-    @ApiResponses({ @ApiResponse(code = 403, message = ""), @ApiResponse(code = 404, message = "") })
-    @DELETE
-    @Produces(MediaType.WILDCARD)
-    @Path("/{dbid}")
-    public void unbind(@PathParam("dbid") String dbid) {
+    @Override
+    public void unbind(String dbid) {
         Entitlement toDelete = entitlementCurator.get(dbid);
         if (toDelete != null) {
             poolManager.revokeEntitlement(toDelete);
@@ -300,39 +248,28 @@ public class EntitlementResource {
             i18n.tr("Entitlement with ID \"{0}\" could not be found.", dbid));
     }
 
-    @ApiOperation(notes = "Regenerates the Entitlement Certificates for a Product",
-        value = "regenerateEntitlementCertificatesForProduct")
-    @ApiResponses({ @ApiResponse(code = 202, message = "") })
-    @PUT
-    @Produces(MediaType.APPLICATION_JSON)
-    @Consumes(MediaType.WILDCARD)
-    @Path("product/{product_id}")
+    @Override
     public AsyncJobStatusDTO regenerateEntitlementCertificatesForProduct(
-        @PathParam("product_id") String productId,
-        @QueryParam("lazy_regen") @DefaultValue("true") boolean lazyRegen)
-        throws JobException {
+        String productId, Boolean lazyRegen) {
 
         JobConfig config = RegenProductEntitlementCertsJob.createJobConfig()
             .setProductId(productId)
             .setLazyRegeneration(lazyRegen);
 
-        AsyncJobStatus status = this.jobManager.queueJob(config);
+        AsyncJobStatus status = null;
+        try {
+            status = this.jobManager.queueJob(config);
+        }
+        catch (JobException e) {
+            e.printStackTrace();
+        }
         return this.translator.translate(status, AsyncJobStatusDTO.class);
     }
 
-    @ApiOperation(notes = "Migrate entitlements from one distributor consumer to another." +
-        " Can specify full or partial quantity. No specified quantity " +
-        "will lead to full migration of the entitlement.", value = "migrateEntitlement")
-    @ApiResponses({ @ApiResponse(code = 404, message = "") })
-    @PUT
-    @Produces(MediaType.APPLICATION_JSON)
-    @Consumes(MediaType.WILDCARD)
-    @Path("{entitlement_id}/migrate")
     @Transactional
-    public Response migrateEntitlement(
-        @PathParam("entitlement_id") @Verify(Entitlement.class) String id,
-        @QueryParam("to_consumer") @Verify(Consumer.class) String uuid,
-        @QueryParam("quantity") Integer quantity) {
+    @Override
+    public Response migrateEntitlement(@Verify(Entitlement.class) String id,
+        @Verify(Consumer.class) String uuid, Integer quantity) {
         // confirm entitlement
         Entitlement entitlement = entitlementCurator.get(id);
         List<Entitlement> entitlements = new ArrayList<>();
@@ -407,43 +344,6 @@ public class EntitlementResource {
         }
         return Response.status(Response.Status.OK)
                 .type(MediaType.APPLICATION_JSON).entity(entitlementDTOs).build();
-
-    }
-
-    /**
-     *
-     * CdnInfo represents a container for subscription entitlement and cdn
-     */
-    @SuppressSwaggerCheck
-    public static class CdnInfo implements Serializable {
-        private static final long serialVersionUID = 523637879312970984L;
-
-        private Cdn cdn;
-        private String subCert;
-
-        public CdnInfo() {
-        }
-
-        public CdnInfo(Cdn cdn, String subEntitlement) {
-            this.cdn = cdn;
-            this.subCert = subEntitlement;
-        }
-
-        public Cdn getCdn() {
-            return this.cdn;
-        }
-
-        public void setCdn(Cdn cdn) {
-            this.cdn = cdn;
-        }
-
-        public String getSubCert() {
-            return this.subCert;
-        }
-
-        public void setSubCert(String subCert) {
-            this.subCert = subCert;
-        }
     }
 
 }
